Rename on_packet to on_message to be more consistent with CEC spec naming

--- a/example_hdmi_cec.yaml
+++ b/example_hdmi_cec.yaml
@@ -56,7 +56,7 @@ external_components:
 hdmi_cec:
   address: 0x05
   pin: 4
-  on_packet:
+  on_message:
     - opcode: 0xC3 # Request ARC start
       then:
         - hdmi_cec.send: # Report ARC started
