--- a/example_fake_arc_device.yaml
+++ b/example_fake_arc_device.yaml
@@ -5,8 +5,10 @@ esphome:
   name: cec
   platform: ESP8266
   board: d1_mini
-  platformio_options:
-    board_build.f_cpu: 160000000L
+  # Maybe necessary depending on what else you're running on the ESP chip.
+  # The execution loop for hdmi_cec is somewhat timing sensitive.
+  # platformio_options:
+  #   board_build.f_cpu: 160000000L
 
 # Enable logging
 logger:
@@ -27,12 +29,12 @@ hdmi_cec:
       then:
         - hdmi_cec.send:
             destination: 0x0
-            data: [ 0x50, 0x72, 0x01 ]
+            data: [ 0x72, 0x01 ]
     - opcode: 0x71 # Give audio status
       then:
         - hdmi_cec.send:
             destination: 0x0
-            data: [ 0x00, 0x71, 0x04 ]
+            data: [ 0x7A, 0x7F ]
     - opcode: 0x7D # Give audio system mode status
       then:
         - hdmi_cec.send:
