--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,7 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "__functional_03": "cpp"
-    }
+    },
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "xaver.clang-format"
 }
