Tell everyone the current audio status

--- a/example_fake_arc_device.yaml
+++ b/example_fake_arc_device.yaml
@@ -35,7 +35,7 @@ hdmi_cec:
     - opcode: 0x70 # System audio mode request
       then:
         - hdmi_cec.send:
-            destination: 0x0
+            destination: 0xF
             data: [ 0x72, 0x01 ]
     - opcode: 0x71 # Give audio status
       then:
